fixed font, added correct line heights, changed gapY and removed some redundant code

--- a/src/styles/blocks/content/card.scss
+++ b/src/styles/blocks/content/card.scss
@@ -25,11 +25,8 @@
   }
 
   &__reviews {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding-top: 16px;
-    line-height: 16px;
+    line-height: 14px;
   }
 
   &__price {
